# studentprojects

./: CMakeLists.txt  README.md
attractor/: atrmain.cpp  atrmain.h  atroptions.cpp  atroptions.h  atrthread.cpp  atrthread.h  img.qrc  main.cpp
elastic/: calc.cpp  calc.h  demo.cpp  demo.h  main.cpp  mainwindow.cpp  mainwindow.h
force/: dlgopt.cpp  dlgopt.h  genwnd.cpp  genwnd.h  main.cpp  solutionthread.cpp  solutionthread.h
liquid/: CMakeLists.txt  dlgopt.cpp  dlgopt.h  genwnd.cpp  genwnd.h  img.qrc  main.cpp  solutionthread.cpp  solutionthread.h
misc/: plotter.cpp  plotter.h
pendulum/: main.cpp  pndmain.cpp  pndmain.h  pndopt.cpp  pndopt.h  pndthread.cpp  pndthread.h
rings/: CMakeLists.txt  main.cpp  nrmainwnd.cpp  nrmainwnd.h  nroptions.cpp  nroptions.h  nrthread.cpp  nrthread.h  uxmath.cpp  uxmath.h
ship/: main.cpp  shipmain.cpp  shipmain.h  shipoptions.cpp  shipoptions.h  shipthread.cpp  shipthread.h
solution/: main.cpp  painter.h  pixmapthread.cpp  solutionthread.cpp  solutionthread.h  wndglav.cpp  wndglav.h  wndopt.cpp  wndopt.h
turing/: euler.cpp  euler.h  main.cpp  painter.cpp  pixmapthread.cpp  pixmapthread.h  rkutt.cpp  rkutt.h  wndmain.cpp  wndmain.h  wndparam.cpp  wndparam.h
